optimizer/src/snapshots/spec_example_build_server.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, isDev, isServer as isServer2 } from '@qwik.dev/core';
import { isServer, isBrowser as isb } from '@qwik.dev/core/build';
import { mongodb } from 'mondodb';
import { threejs } from 'threejs';

import L from 'leaflet';

export const functionThatNeedsWindow = () => {
  if (isb) {
    console.log('l', L);
    console.log('hey');
    window.alert('hey');
  }
};

export const App = component$(() => {
	useMount$(() => {
		if (isServer) {
			console.log('server', mongodb());
		}
		if (isb) {
			console.log('browser', new threejs());
		}
	});
	return (
		<Cmp>
			{isServer2 && <p>server</p>}
			{isb && <p>server</p>}
		</Cmp>
	);
});

============================= test.tsx_App_component_useMount_H8ViXD28YGQ.tsx (ENTRY POINT)==

import { mongodb } from "mondodb";
import { threejs } from "threejs";
export const s_H8ViXD28YGQ = ()=>{
	if (true) {
		console.log("server", mongodb());
	}
	if (false) {
		console.log("browser", new threejs());
	}
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_H8ViXD28YGQ",
  "entry": null,
  "displayName": "test.tsx_App_component_useMount",
  "hash": "H8ViXD28YGQ",
  "canonicalFilename": "test.tsx_App_component_useMount_H8ViXD28YGQ",
  "path": "",
  "extension": "tsx",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useMount$",
  "captures": false,
  "loc": [
    440,
    568
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.tsx (ENTRY POINT)==

import { useMountQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { isBrowser as isb } from "@qwik.dev/core/build";
import { isServer as isServer2 } from "@qwik.dev/core";
export const s_ckEPmXZlub0 = ()=>{
	/*#__PURE__*/ useMountQrl(/*#__PURE__*/ qrl(i_H8ViXD28YGQ, "s_H8ViXD28YGQ"));
	return <Cmp>
			{isServer2 && <p>server</p>}
			{isb && <p>server</p>}
		</Cmp>;
};


None
/*
{
  "origin": "test.tsx",
  "name": "s_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    421,
    661
  ]
}
*/
============================= test.tsx ==

import L from "leaflet";
import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import L from "leaflet";
const i_H8ViXD28YGQ = ()=>import("./test.tsx_App_component_useMount_H8ViXD28YGQ");
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const functionThatNeedsWindow = ()=>{
	if (false) {
		console.log("l", L);
		console.log("hey");
		window.alert("hey");
	}
};
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "s_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
