optimizer/src/snapshots/spec_example_capture_imports.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStyles$ } from '@qwik.dev/core';
import css1 from './global.css';
import css2 from './style.css';
import css3 from './style.css';

export const App = component$(() => {
	useStyles$(`${css1}${css2}`);
	useStyles$(css3);
})

============================= test.tsx_App_component_useStyles_t35nSa5UV7U.js (ENTRY POINT)==

import css1 from "./global.css";
import css2 from "./style.css";
export const App_component_useStyles_t35nSa5UV7U = `${css1}${css2}`;


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_t35nSa5UV7U",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles",
  "hash": "t35nSa5UV7U",
  "canonicalFilename": "test.tsx_App_component_useStyles_t35nSa5UV7U",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    205,
    221
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { useStylesQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
export const App_component_ckEPmXZlub0 = ()=>{
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_t35nSa5UV7U, "App_component_useStyles_t35nSa5UV7U"));
	/*#__PURE__*/ useStylesQrl(/*#__PURE__*/ qrl(i_xBK4W0ZKWe8, "App_component_useStyles_1_xBK4W0ZKWe8"));
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    185,
    244
  ]
}
*/
============================= test.tsx_App_component_useStyles_1_xBK4W0ZKWe8.js (ENTRY POINT)==

import css3 from "./style.css";
export const App_component_useStyles_1_xBK4W0ZKWe8 = css3;


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_useStyles_1_xBK4W0ZKWe8",
  "entry": null,
  "displayName": "test.tsx_App_component_useStyles_1",
  "hash": "xBK4W0ZKWe8",
  "canonicalFilename": "test.tsx_App_component_useStyles_1_xBK4W0ZKWe8",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useStyles$",
  "captures": false,
  "loc": [
    236,
    240
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_t35nSa5UV7U = ()=>import("./test.tsx_App_component_useStyles_t35nSa5UV7U");
const i_xBK4W0ZKWe8 = ()=>import("./test.tsx_App_component_useStyles_1_xBK4W0ZKWe8");
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
