optimizer/src/snapshots/spec_example_class_name.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export const App2 = component$(() => {
	const signal = useSignal();
	const computed = signal.value + 'foo';
	return (
		<>
			<div className="hola"></div>
			<div className={signal.value}></div>
			<div className={signal}></div>
			<div className={computed}></div>

			<Foo className="hola"></Foo>
			<Foo className={signal.value}></Foo>
			<Foo className={signal}></Foo>
			<Foo className={computed}></Foo>
		</>
	);
});

============================= test.tsx_App2_component_3yveMqbQ3Fs.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
export const App2_component_3yveMqbQ3Fs = ()=>{
	const signal = useSignal();
	const computed = signal.value + "foo";
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, { className: "hola" }, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", { className: _wrapProp(signal) }, null, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, { className: signal }, null, 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, { className: computed }, null, 3, null),
		_jsxSorted(Foo, null, { className: "hola" }, null, 3, null),
		_jsxSorted(Foo, { className: _wrapProp(signal) }, null, null, 3, null),
		_jsxSorted(Foo, null, { className: signal }, null, 3, null),
		_jsxSorted(Foo, null, { className: computed }, null, 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App2_component_3yveMqbQ3Fs",
  "entry": null,
  "displayName": "test.tsx_App2_component",
  "hash": "3yveMqbQ3Fs",
  "canonicalFilename": "test.tsx_App2_component_3yveMqbQ3Fs",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    77,
    465
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_3yveMqbQ3Fs = ()=>import("./test.tsx_App2_component_3yveMqbQ3Fs");
export const App2 = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_3yveMqbQ3Fs, "App2_component_3yveMqbQ3Fs"));


None
== DIAGNOSTICS ==

[]
