optimizer/src/snapshots/spec_example_component_with_event_listeners_inside_loop.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useStore, useSignal } from '@qwik.dev/core';
export const App = component$(() => {
      const cart = useStore<string[]>([]);
      const results = useSignal(['foo']);
      function loopArrowFn(results: string[]) {
        return results.map((item) => (
          <span
            onClick$={() => {
              cart.push(item);
            }}
          >
            {item}
          </span>
        ));
      }
      function loopForI(results: string[]) {
        const items = [];
        for (let i = 0; i < results.length; i++) {
          items.push(
            <span
              onClick$={() => {
                cart.push(results[i]);
              }}
            >
              {results[i]}
            </span>
          );
        }
        return items;
      }
      function loopForOf(results: string[]) {
        const items = [];
        for (const item of results) {
          items.push(
            <span
              onClick$={() => {
                cart.push(item);
              }}
            >
              {item}
            </span>
          );
        }
        return items;
      }
      function loopForIn(results: string[]) {
        const items = [];
        for (const key in results) {
          items.push(
            <span
              onClick$={() => {
                cart.push(results[key]);
              }}
            >
              {results[key]}
            </span>
          );
        }
        return items;
      }
      function loopWhile(results: string[]) {
        const items = [];
        let i = 0;
        while (i < results.length) {
          items.push(
            <span
              onClick$={() => {
                cart.push(results[i]);
              }}
            >
              {results[i]}
            </span>
          );
          i++;
        }
        return items;
      }
      return (
        <div>
          {results.value.map((item) => (
            <button
              id="second"
              onClick$={() => {
                cart.push(item);
              }}
            >
              {item}
            </button>
          ))}
          {loopArrowFn(results.value)}
          {loopForI(results.value)}
          {loopForOf(results.value)}
          {loopForIn(results.value)}
          {loopWhile(results.value)}
        </div>
      );
    });

============================= test.tsx_App_component_div_button_on_click_5a2ivZyN1Y0.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const App_component_div_button_on_click_5a2ivZyN1Y0 = (_, _1, item)=>{
	const [cart] = useLexicalScope();
	cart.push(item);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_div_button_on_click_5a2ivZyN1Y0",
  "entry": null,
  "displayName": "test.tsx_App_component_div_button_on_click",
  "hash": "5a2ivZyN1Y0",
  "canonicalFilename": "test.tsx_App_component_div_button_on_click_5a2ivZyN1Y0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_App_component_ckEPmXZlub0.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_5a2ivZyN1Y0 = ()=>import("./test.tsx_App_component_div_button_on_click_5a2ivZyN1Y0");
export const App_component_ckEPmXZlub0 = ()=>{
	const cart = useStore([]);
	const results = useSignal(["foo"]);
	const App_component_div_button_on_click_5a2ivZyN1Y0 = /*#__PURE__*/ qrl(i_5a2ivZyN1Y0, "App_component_div_button_on_click_5a2ivZyN1Y0", [cart]);
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		results.value.map((item)=>/*#__PURE__*/ _jsxSorted("button", {
			"on:click": App_component_div_button_on_click_5a2ivZyN1Y0,
			"q:p": item
		}, { id: "second" }, item, 1, null)),
		loopArrowFn(results.value),
		loopForI(results.value),
		loopForOf(results.value),
		loopForIn(results.value),
		loopWhile(results.value)
	], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "App_component_ckEPmXZlub0",
  "entry": null,
  "displayName": "test.tsx_App_component",
  "hash": "ckEPmXZlub0",
  "canonicalFilename": "test.tsx_App_component_ckEPmXZlub0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    99,
    2368
  ]
}
*/
============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_ckEPmXZlub0 = ()=>import("./test.tsx_App_component_ckEPmXZlub0");
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ckEPmXZlub0, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'loopArrowFn' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'loopForI' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'loopForOf' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'loopForIn' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  },
  {
    "category": "error",
    "code": "C02",
    "file": "test.tsx",
    "message": "Reference to identifier 'loopWhile' can not be used inside a Qrl($) scope because it's a function",
    "highlights": null,
    "suggestions": null,
    "scope": "optimizer"
  }
]
