optimizer/src/snapshots/spec_example_default_export.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';
import { sibling } from './sibling';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb, sibling)}>
		</div>
	);
});

============================= [[...slug]].tsx__slug_component_div_onClick_GTltJzWrvB8.js (ENTRY POINT)==

import { sibling } from "./sibling";
export const _slug_component_div_onClick_GTltJzWrvB8 = ()=>console.log(mongodb, sibling);


None
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "_slug_component_div_onClick_GTltJzWrvB8",
  "entry": null,
  "displayName": "[[...slug]].tsx__slug_component_div_onClick",
  "hash": "GTltJzWrvB8",
  "canonicalFilename": "[[...slug]].tsx__slug_component_div_onClick_GTltJzWrvB8",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= [[...slug]].tsx__slug_component_pK900rcyxdM.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
const i_GTltJzWrvB8 = ()=>import("./[[...slug]].tsx__slug_component_div_onClick_GTltJzWrvB8");
export const _slug_component_pK900rcyxdM = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", { "on:click": /*#__PURE__*/ qrl(i_GTltJzWrvB8, "_slug_component_div_onClick_GTltJzWrvB8") }, null, null, 3, null);
};


None
/*
{
  "origin": "src/routes/_repl/[id]/[[...slug]].tsx",
  "name": "_slug_component_pK900rcyxdM",
  "entry": "./src/routes/_repl/[id]/[[...slug]].tsx_entry_[[...slug]]",
  "displayName": "[[...slug]].tsx__slug_component",
  "hash": "pK900rcyxdM",
  "canonicalFilename": "[[...slug]].tsx__slug_component_pK900rcyxdM",
  "path": "src/routes/_repl/[id]",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    109,
    196
  ]
}
*/
============================= src/routes/_repl/[id]/[[...slug]].js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_pK900rcyxdM = ()=>import("./[[...slug]].tsx__slug_component_pK900rcyxdM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_pK900rcyxdM, "_slug_component_pK900rcyxdM"));


None
== DIAGNOSTICS ==

[]
