optimizer/src/snapshots/spec_example_default_export_invalid_ident.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$(() => {
	return (
		<div onClick$={() => console.log(mongodb)}>
		</div>
	);
});

============================= 404.tsx__404_component_div_on_click_cQ5G4wKj1Ho.tsx (ENTRY POINT)==

export const _404_component_div_on_click_cQ5G4wKj1Ho = ()=>console.log(mongodb);


None
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_div_on_click_cQ5G4wKj1Ho",
  "entry": null,
  "displayName": "404.tsx__404_component_div_on_click",
  "hash": "cQ5G4wKj1Ho",
  "canonicalFilename": "404.tsx__404_component_div_on_click_cQ5G4wKj1Ho",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
============================= 404.tsx__404_component_zRvoWc98eqo.tsx (ENTRY POINT)==

import { qrl } from "@qwik.dev/core";
const i_cQ5G4wKj1Ho = ()=>import("./404.tsx__404_component_div_on_click_cQ5G4wKj1Ho");
export const _404_component_zRvoWc98eqo = ()=>{
	return <div on:click={/*#__PURE__*/ qrl(i_cQ5G4wKj1Ho, "_404_component_div_on_click_cQ5G4wKj1Ho")}>
		</div>;
};


None
/*
{
  "origin": "src/components/mongo/404.tsx",
  "name": "_404_component_zRvoWc98eqo",
  "entry": null,
  "displayName": "404.tsx__404_component",
  "hash": "zRvoWc98eqo",
  "canonicalFilename": "404.tsx__404_component_zRvoWc98eqo",
  "path": "src/components/mongo",
  "extension": "tsx",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    150
  ]
}
*/
============================= src/components/mongo/404.tsx ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
const i_zRvoWc98eqo = ()=>import("./404.tsx__404_component_zRvoWc98eqo");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_zRvoWc98eqo, "_404_component_zRvoWc98eqo"));


None
== DIAGNOSTICS ==

[]
