optimizer/src/snapshots/spec_example_derived_signals_multiple_children.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, mutable } from '@qwik.dev/core';

import {dep} from './file';

export const App = component$(() => {
	const signal = useSignal(0);
	const store = useStore({});
	return (
		<>
			<div>First text</div>
			<div>First {`text`}</div>
			<div>First {1}</div>
			<div>First {true}</div>
			<div>First {`text${12}`}</div>
			<div>First {typeof `text${12}` === 'string' ? 12 : 43}</div>
			<div>First {signal}</div>
			<div>First {signal.value}</div>
			<div>First {12 + signal.value}</div>
			<div>First {store.address.city.name}</div>
			<div>First {store.address.city.name ? 'true' : 'false'}</div>
			<div>First {dep}</div>
			<div>First {dep.thing}</div>
			<div>First {dep.thing + 'stuff'}</div>
			<div>First {globalThing}</div>
			<div>First {globalThing.thing}</div>
			<div>First {globalThing.thing + 'stuff'}</div>
			<div>First {signal.value()}</div>
			<div>First {signal.value + unknown()}</div>
			<div>First {mutable(signal)}</div>
			<div>First {signal.value + dep}</div>
		</>
	);
});

============================= test.js ==

import { Fragment as _Fragment } from "@qwik.dev/core/jsx-runtime";
import { useStore } from "@qwik.dev/core";
import { mutable } from "@qwik.dev/core";
import { dep } from "./file";
import { componentQrl } from "@qwik.dev/core";
import { _wrapProp } from "@qwik.dev/core";
import { inlinedQrl } from "@qwik.dev/core";
import { _jsxSorted } from "@qwik.dev/core";
import { componentQrl } from "@qwik.dev/core";
import { useStore } from "@qwik.dev/core";
import { mutable } from "@qwik.dev/core";
import { dep } from "./file";
export const App = /*#__PURE__*/ componentQrl(/*#__PURE__*/ inlinedQrl(()=>{
	const signal = useSignal(0);
	const store = useStore({});
	return /*#__PURE__*/ _jsxSorted(_Fragment, null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, null, "First text", 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", `text`], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", 1], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", true], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", `text${12}`], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", typeof `text${12}` === "string" ? 12 : 43], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", signal], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", _wrapProp(signal)], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", 12 + signal.value], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", store.address.city.name], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", store.address.city.name ? "true" : "false"], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", dep], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", dep.thing], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", dep.thing + "stuff"], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", globalThing], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", globalThing.thing], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", globalThing.thing + "stuff"], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", signal.value()], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", signal.value + unknown()], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", mutable(signal)], 1, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, ["First", signal.value + dep], 1, null)
	], 3, null);
}, "App_component_ckEPmXZlub0"));


None
== DIAGNOSTICS ==

[]
